adding elements around markup left un..uh  elemented

--- a/index.html
+++ b/index.html
@@ -2,77 +2,43 @@
 <html>
 <head>
 	<title>Ryan Page</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="portfolio.css">
 	<link href='http://fonts.googleapis.com/css?family=Karla' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-  <link href="http://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel="stylesheet" type="text/css">
+	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href="http://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700" rel="stylesheet" type="text/css">
 </head>
 <body>
-		<div class="header">
-			<div class="inner-name" id="title">
-				<a href=#illustration>Ryan Page</a>
-			</div>
+	<div class="header">
+		<div class="inner-name" id="title">
+			<a href="#">Ryan Page</a>
 		</div>
-		<div class="illustration">
-			<h1>Web Developer</h1>
-		</div>
-		<!-- About Me -->
-		<div class="about"> 
-			<div class="inner">
-				<p class="tagline" class="about-tag">About</p>
-				<div class="code">
-
-					<div class="console">
-						> Ryan.from
-						<br>
-						<span class="answer"> => "Boston, MA"</span>
-						<br>
-						<br>
-
-						> Ryan.interests
-						<br>
-						<span class="answer"> => ["Running", "Movies", "Music", "Lit", "Food", "Concerts"]</span>
-						<br>
-						<br>
-						> Ryan.education
-						<br>
-						<span class="answer"> => ["General Assembly Web Development Immersive Course", "CodeAcademy HTML/CSS, Javascript, jQuery, and Ruby Courses"]</span>
-						<br>
-						<br>
-						> Ryan.resume
-						<br>
-						<span class="answer"> => "<a href="." title="">ryanpage.pdf</a>"</span>
-						<br>
-						<br>
-						> Ryan.onlinePresence
-						<br>
-						<span class="answer"> => "<a href="http://ryanpah.tumblr.com/" title="">ryanpah.tumblr.com</a>"</span>
-						<br>
-						<br>
-						> Ryan.contact
-						<br>
-						<span class="answer"> => "<a href="rpage326@gmail.com" title="">rpage326@gmail.com</a>"</span>
-					</div>
-				</div>
-				<br>
-				<br>
-				<br>
-				<!-- Console -->
-			</div>
-		</div>
-		<div class="skills">
-      <div class="inner">
-        <p class="tagline">Skills</p>
-      </div>
-			<!-- Portfolio -->
-		</div>
-		<div class="work">
-			
-		</div>
-		
-	<div class="footer">
-		
 	</div>
+	<!-- About Me -->
+	<div class="inner">
+		<div class="code">
+			<div class="console">
+				<p class="blink">|</p>
+				<p> > Ryan.from</p>
+				<span class="answer"> => "Boston, MA"</span>
+				> Ryan.interests
+				<span class="answer"> => ["Running", "Movies", "Music", "Lit", "Food", "Concerts"]</span>
+				> Ryan.education
+				<span class="answer"> => ["General Assembly Web Development Immersive Course", "CodeAcademy HTML/CSS, Javascript, jQuery, and Ruby Courses"]</span>
+				> Ryan.resume
+				<span class="answer"> => "<a href="." title="">ryanpage.pdf</a>"</span>
+				> Ryan.onlinePresence
+				<span class="answer"> => "<a href="http://ryanpah.tumblr.com/" title="">ryanpah.tumblr.com</a>"</span>
+				> Ryan.contact
+				<span class="answer"> => "<a href="rpage326@gmail.com" title="">rpage326@gmail.com</a>"</span>
+			</div>
+		</div>
+	</div>
+</div>
+
+
+<div class="footer">
+
+</div>
 
 </body>
 </html>
