wrapped a whole bunch of unwrapped tags, thanks Emmet

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 	<div class="inner">
 		<div class="code">
 			<div class="console">
-				<p class="blink">|</p>
+				<p class="blink">&#9632;</p>
 				<p> > Ryan.from</p>
 				<span class="answer"> => "Boston, MA"</span>
-				> Ryan.interests
+				<p> > Ryan.interests</p>
 				<span class="answer"> => ["Running", "Movies", "Music", "Lit", "Food", "Concerts"]</span>
-				> Ryan.education
+				<p>> Ryan.education</p>
 				<span class="answer"> => ["General Assembly Web Development Immersive Course", "CodeAcademy HTML/CSS, Javascript, jQuery, and Ruby Courses"]</span>
-				> Ryan.resume
+				<p>> Ryan.resume</p>
 				<span class="answer"> => "<a href="." title="">ryanpage.pdf</a>"</span>
-				> Ryan.onlinePresence
+				<p>> Ryan.onlinePresence</p>
 				<span class="answer"> => "<a href="http://ryanpah.tumblr.com/" title="">ryanpah.tumblr.com</a>"</span>
-				> Ryan.contact
+				<p>> Ryan.contact</p>
 				<span class="answer"> => "<a href="rpage326@gmail.com" title="">rpage326@gmail.com</a>"</span>
 			</div>
 		</div>
